# hf-bids-nifti-datasets

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  mypy.ini  pyproject.toml
scripts/: download_dataset.sh.example
src/hf_bids_nifti/: __init__.py  arc.py  cli.py  config.py  core.py  soop.py  validation.py
tests/: test_cli_skeleton.py  test_core_nifti.py  test_validation.py
