[project]
name = "hf-bids-nifti-datasets"
version = "0.1.0"
description = "Template for converting BIDS neuroimaging datasets into Hugging Face Datasets with NIfTI + tabular features"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "The-Obstacle-Is-The-Way" }
]
keywords = ["bids", "nifti", "neuroimaging", "huggingface", "datasets", "mri"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "datasets>=3.4.0",
    "nibabel>=5.0.0",
    "pandas>=2.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
hf-bids-nifti = "hf_bids_nifti.cli:app"

[project.urls]
Homepage = "https://github.com/The-Obstacle-Is-The-Way/hf-bids-nifti-datasets"
Repository = "https://github.com/The-Obstacle-Is-The-Way/hf-bids-nifti-datasets"
Issues = "https://github.com/The-Obstacle-Is-The-Way/hf-bids-nifti-datasets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_bids_nifti"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "B008",  # Do not perform function calls in argument defaults - false positive for typer
]

[tool.ruff.lint.isort]
known-first-party = ["hf_bids_nifti"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
